Add request logging Add working routes for adding/deleting multiple geofences Add routes for floorplan, routers, sensors
