# src/routes/v1.js
@@ -14,9 +14,18 @@ router.use('/employee', require('./v1/employeeRoutes'));
 router.use('/equipment', require('./v1/equipmentRoutes'));
 
 // /api/v1/location/... endpoints defined in routes/v1/location.js
-// router.use('/location', require('./v1/locationRoutes'));
+router.use('/location', require('./v1/locationRoutes'));
 
 // /api/v1/geofence/... endpoints defined in routes/v1/geofence.js
 router.use('/geofence', require('./v1/geofenceRoutes'));
+
+// /api/v1/floorplan/... endpoints defined in routes/v1/floorplan.js
+router.use('/floorplan', require('./v1/floorplanRoutes'));
+
+// /api/v1/router/... endpoints defined in routes/v1/router.js
+router.use('/router', require('./v1/routerRoutes'));
+
+// /api/v1/sensor/... endpoints defined in routes/v1/sensor.js
+// router.use('/sensor', require('./v1/sensorRoutes'));
 
 module.exports = router;
