# src/routes/v1/geofenceRoutes.js
@@ -12,6 +12,9 @@ router.all('/', (req, res) => {
 // use handler defined in controllers/geofenceControllers.js
 router.post('/add', geofenceControllers.geofenceAdd);
 
+// POST /api/v1/geofence/add/bulk endpoint
+router.post('/add/bulk', geofenceControllers.geofenceAddBulk);
+
 // GET /api/v1/geofence/get/all
 router.get('/get/all', geofenceControllers.geofenceGetAll);
 
@@ -21,8 +24,10 @@ router.get('/get/:id', geofenceControllers.geofenceGetById);
 // PUT /api/v1/geofence/update/:id endpoint
 router.put('/update/:id', geofenceControllers.geofenceUpdateById);
 
+// DELETE /api/v1/geofence/delete/all endpoint
+router.delete('/delete/all', geofenceControllers.geofenceDeleteAll);
+
 // DELETE /api/v1/geofence/delete/:id endpoint
 router.delete('/delete/:id', geofenceControllers.geofenceDeleteById);
-
 
 module.exports = router;
